--- a/src/pages/coaching/coaching.html
+++ b/src/pages/coaching/coaching.html
@@ -4,8 +4,14 @@
             <ion-icon name='menu'></ion-icon>
         </button>
         <ion-title>
-            Mes Plan'it
+            Mes Plan'it 
         </ion-title>
+          <ion-buttons end>
+      <button ion-button icon-only (click)="evenement()">
+         <ion-icon name="add" ></ion-icon>
+      </button>
+          </ion-buttons>
+ 
     </ion-navbar>
 </ion-header>
 <ion-content  class="card-background-page">
